# Halite-III

./: .appveyor.bat  .gitattributes  .gitignore  .travis.before_install.sh  .travis.script.sh  .travis.yml  CONTRIBUTING.md  README.md  appveyor.yml  deploy.sh  package-lock.json  package.json
admin/: config.sh  setup_gpu_worker_image.sh  setup_website.sh  setup_website__startup_script.sh  setup_worker_image.sh  setup_workers__ondemand_startup_script.sh  verify_gpu.py
admin/deploy/: deploy.py  requirements.txt
airesources/C++/: BasicBot.cpp  CMakeLists.txt  MyBot.cpp  hlt.hpp  make.bat  run_game.bat  run_game.sh
airesources/Java/: MyBot.java  run_game.bat  run_game.sh
airesources/JavaScript/: MyBot.js
airesources/OCaml/: .merlin  MyBot.ml  bot.ml  bot.mli  build.sh  halite.ml  haliteImpl.ml  networking.ml  networking.mli  run_game.bat  run_game.sh  units.ml
airesources/Python3/: MyBot.py  constants.py  hlt.py  run_game.bat  run_game.sh
airesources/benchmark/: Retriever.py
apiserver/: requirements.txt  setup.sh
apiserver/alembic/: env.py
apiserver/apiserver/: __init__.py  config.py  editor_server.py  index.yaml  model.py  notify.py  ondemand.py  server.py  util.py
apiserver/sql/: schema.sql
apiserver/worker/: backend.py  compiler.py  grab_config.py  setup.sh  worker.py
environment/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  TestMain.cpp  main.cpp  make.bat  version.hpp
environment/catch_tests/: CellTest.cpp  LocationTest.cpp  MapTest.cpp
environment/config/: Config.cpp  Config.hpp  Constants.cpp  Constants.hpp  NetworkingConfig.hpp
environment/core/: Command.cpp  Command.hpp  CommandTransaction.cpp  CommandTransaction.hpp  Constants.hpp  Entity.cpp  Entity.hpp  GameEvent.hpp  Halite.cpp  Halite.hpp  HaliteImpl-Command.cpp  HaliteImpl-Entity.cpp  HaliteImpl-Factories.cpp  HaliteImpl-Player.cpp  HaliteImpl-Production.cpp  HaliteImpl.cpp  HaliteImpl.hpp  OwnershipGrid.hpp  Replay.cpp  Replay.hpp  Statistics.cpp  Statistics.hpp  Store.cpp  Store.hpp  Transaction.cpp  Transaction.hpp  hlt.cpp  hlt.hpp
environment/core/command/: Command.cpp  Command.hpp  CommandTransaction.cpp  CommandTransaction.hpp  Transaction.cpp  Transaction.hpp
environment/core/mapgen/: Generator.cpp  Generator.hpp
environment/error/: BotCommandError.hpp  BotCommunicationError.cpp  BotCommunicationError.hpp  CommandError.cpp  CommandError.hpp  JsonError.cpp  JsonError.hpp  NetworkingError.cpp  NetworkingError.hpp  SnapshotError.hpp  TimeoutError.cpp  TimeoutError.hpp
environment/logging/: Logging.cpp  Logging.hpp  PlayerLog.cpp  PlayerLog.hpp
environment/mapgen/: BasicGenerator.cpp  BasicGenerator.hpp  BlurTileGenerator.cpp  BlurTileGenerator.hpp  FractalValueNoiseTileGenerator.cpp  FractalValueNoiseTileGenerator.hpp  Generator.cpp  Generator.hpp  MapConstants.cpp  MapConstants.hpp  MapTest.cpp  SymmetricalTile.cpp  SymmetricalTile.hpp  TileGenerator.cpp  TileGenerator.hpp
environment/model/: Auction.cpp  Auction.hpp  Cell.cpp  Cell.hpp  Command.cpp  Command.hpp  Entity.cpp  Entity.hpp  Enumerated.hpp  Factory.hpp  Grid.hpp  IndependentEntity.cpp  IndependentEntity.hpp  Location.cpp  Location.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp
environment/networking/: Networking.hpp
environment/networking/common/: Connection.cpp  Connection.hpp  Networking.cpp  Networking.hpp  NetworkingConfig.cpp  NetworkingConfig.hpp  NetworkingError.hpp
environment/networking/unix/: UnixConnection.cpp  UnixConnection.hpp
environment/networking/win32/: WinConnection.cpp  WinConnection.hpp
environment/replay/: GameEvent.cpp  GameEvent.hpp  Replay.cpp  Replay.hpp  Snapshot.cpp  Snapshot.hpp
environment/test/: CellTest.cpp  DropoffTest.cpp  EntityTest.cpp  GridTest.cpp  LocationTest.cpp  MapTest.cpp  PlayerTest.cpp  ReplayTest.cpp  TestMain.cpp
environment/util/: Transaction.hpp  util.hpp
game_engine/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  emscripten.sh  glue.cpp  main.cpp  make.bat  set_version.sh  version.hpp
game_engine/config/: Constants.cpp  Constants.hpp  NetworkingConfig.hpp
game_engine/core/: Halite.cpp  Halite.hpp  HaliteImpl.cpp  HaliteImpl.hpp  Statistics.cpp  Statistics.hpp  Store.cpp
game_engine/core/command/: BaseTransaction.hpp  Command.cpp  CommandTransaction.cpp  CommandTransaction.hpp  Transaction.cpp
game_engine/error/: BotCommunicationError.hpp  BotError.hpp  CommandError.cpp  NetworkingError.hpp  SnapshotError.hpp  TimeoutError.hpp
game_engine/logging/: Logging.cpp  Logging.hpp
game_engine/mapgen/: BasicGenerator.cpp  BlurTileGenerator.cpp  BlurTileGenerator.hpp  FractalValueNoiseTileGenerator.hpp  Generator.cpp  Generator.hpp  SymmetricalTile.cpp  TileGenerator.cpp  TileGenerator.hpp
game_engine/model/: Cell.cpp  Dropoff.hpp  Entity.cpp  Entity.hpp  Grid.cpp  Grid.hpp  Location.cpp  Location.hpp  Map.hpp  Player.cpp  Player.hpp  Units.hpp
game_engine/networking/common/: Connection.cpp  Connection.hpp  Networking.cpp  Networking.hpp
game_engine/networking/win32/: WinConnection.cpp  WinConnection.hpp
game_engine/replay/: GameEvent.cpp  GameEvent.hpp  Replay.cpp  Replay.hpp  Snapshot.cpp
game_engine/test/: CellTest.cpp  GridTest.cpp  LocationTest.cpp  integration_test.py  integration_test_bot.py
game_engine/util/: ansi.hpp
libhaliteviz/: package-lock.json  package.json  webpack.config.js
libhaliteviz/assets/: colorblind-ii.json  colorblind.json  hallotheme.json  nethack.json  turtle.json
libhaliteviz/src/: HaliteHud.vue  animation.js  assets.js  camera.js  colors.js  embeddedControls.js  factory.js  fish.js  keyboardControls.js  main.js  map.js  map.js.bak  parse.js  parseWorker.js  sprite.js  statistics.js  theme.js  visualizer.js
starter_kits/: .gitignore  README.md
starter_kits/C/src/: CMakeLists.txt  MyBot.c  default_logic.c  macros.c
website/: .eslintrc.json  .gitignore  Gemfile  README.md  _config.yml  editor.md  halitetv.md  index.md  leaderboard.md  login.md  make_starter_kits.py  package-lock.json  package.json  play.md  webpack.common.js  webpack.config.js  webpack.prod.js
(+748 files in other folders)
